Add .nojekyll file to prevent Jekyll processing on GitHub Pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,6 +50,12 @@ jobs:
           VITE_API_URL: ${{ secrets.VITE_API_URL || '' }}
         run: npm run build
 
+      - name: Disable Jekyll processing
+        run: |
+          # Create .nojekyll file in dist to prevent GitHub Pages from using Jekyll
+          touch dist/.nojekyll
+          echo ".nojekyll file created to disable Jekyll processing"
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
