--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "Interactive architecture diagram viewer and project tracker for BitniTex",
   "private": true,
-  "homepage": "https://hessi3700.github.io/bitnitex-architecture-viewer",
+  "homepage": "https://yourusername.github.io/bitnitex",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist",
+    "install:all": "npm install && cd backend && npm install",
+    "start": "npm run install:all && concurrently \"npm run dev\" \"cd backend && npm run start:dev\"",
+    "start:quick": "concurrently \"npm run dev\" \"cd backend && npm run start:dev\""
   },
   "dependencies": {
     "framer-motion": "^10.16.16",
@@ -20,6 +23,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
+    "concurrently": "^8.2.2",
     "gh-pages": "^6.3.0",
     "vite": "^5.0.8"
   }
