Remove deployment script and update author information
- Deleted the `deploy-ubuntu.sh` script to streamline the project and remove outdated deployment instructions.
- Added author information to `index.html`, `package.json`, and `backend/package.json` for better attribution.
- Introduced new CSS classes for sidebar credits and footer to enhance the user interface.

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
     "api",
     "bitnitex"
   ],
-  "author": "",
+  "author": "Hesam Kazemi (HessiKz)",
   "license": "ISC",
   "dependencies": {
     "@nestjs/common": "^11.1.10",
